# Mark_Lutz

./: .gitignore  README.md  pyproject.toml
mark_lutz/part_4/exerscises/: ex_1.py  ex_10.py  ex_11.py  ex_12.py  ex_3.py  ex_7.py
mark_lutz/part_4/timer_ex/: timer_ex.py
src/part_4/exerscises/: ex_5.py  ex_6.py  ex_8.py  ex_9.py
src/part_4/timer_ex/: timer_ex.py
tests/: conftest.py  factories.py  fuxtures.py
tests/part_4/: test_ex_10.py  test_ex_11.py  test_ex_12.py  test_ex_5.py  test_ex_6.py  test_ex_9.py
tests/test_examples/: test_learning.py  test_mock_ex.py
tests/test_exp/: test_iter.py  test_set.py
