[project]
name = "mark-lutz"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitry Alexandrov",email = "alexandrov.dm91@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=8.4.1,<9.0.0)",
    "faker (>=37.6.0,<38.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
